<resources>
    <string name="app_name">TVUPgrade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    HomeAuthFragment-->
    <string name="iniciar">Iniciar</string>
    <string name="title_home_auth_fragment">Entrar com</string>
    <string name="button_continue_with_facebook_home_auth_fragment">Continuar com o Facebook</string>
    <string name="button_continue_with_google_home_auth_fragment">Continuar com o Google</string>
    <string name="text_social_or_password_home_auth_fragment">ou</string>
    <string name="button_sign_in_with_password_home_auth_fragment">Entrar com e-mail e senha</string>
    <string name="text_dont_have_an_account_home_auth_fragment">Não tem uma conta?</string>
    <string name="text_sign_up_home_auth_fragment">Inscrever-se</string>
    <string name="continuar_com_o_google">Continuar com o Google</string>
    <string name="clique_aqui">Clique aqui</string>
    <string name="continuar_com_o_facebook">Continuar com o facebook</string>

    <!--    RegisterFragment-->
    <string name="title_register_fragment">Crie sua conta</string>
    <string name="text_hint_edit_email_register_fragment">Email</string>
    <string name="text_hint_edit_password_register_fragment">Senha</string>
    <string name="text_button_sign_up_register_fragment">Inscrever-se</string>
    <string name="text_continue_social_network_register_fragment">ou continuar com</string>
    <string name="text_already_account_register_fragment">já tem uma conta?</string>
    <string name="text_button_sign_in_register_fragment">Entrar</string>
    <string name="text_email_empty_register_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_register_fragment">Digite uma senha</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="inscreva_se">Inscreva-se</string>
    <string name="clique_aqui_se_esqueceu_a_senha">Clique aqui se esqueceu a senha</string>
    <string name="sing_in">Sing in</string>

    <!--    LoginFragment-->
    <string name="title_login_fragment">Faça login na sua conta</string>
    <string name="text_hint_edit_email_login_fragment">Email</string>
    <string name="text_hint_edit_password_login_fragment">Senha</string>
    <string name="text_button_sign_in_login_fragment">Entrar</string>
    <string name="text_forgot_password_login_fragment">Esqueceu a senha?</string>
    <string name="text_continue_social_network_login_fragment">ou continuar com</string>
    <string name="entre_na_sua_conta">Entre na sua conta</string>
    <string name="text_email_bem_vindo">Bem vindo(a)</string>

    <!--    ForgotFragment-->
    <string name="title_forgot_fragment">Crie sua nova senha</string>
    <string name="text_hint_edit_email_forgot_fragment">Email</string>
    <string name="text_button_forgot_fragment">Recuperar conta</string>
    <string name="Notify_forgot">Enviaremos um link de confirmação no seu e-mail, certifique que o e-mail usado está correto!</string>
    <string name="text_hint_edit_email_forgot_recovery_fragment">Digite seu email</string>
    <string name="text_email_empty_forgot_fragment">Digite um email válido.</string>

    <!--    Generic-->
    <string name="text_name_empty">Digite seu nome</string>
    <string name="text_email_empty">Digite seu e-mail</string>
    <string name="text_phone_empty">Digite seu telefone</string>
    <string name="text_phone_invalid">Digite um telefone válido</string>
    <string name="text_password_empty">Digite sua senha</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="text_formated_value">R$ %1$s</string>
    <string name="text_sucesso_register">Cadastro realizado com sucesso</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="text_email_empty_login_fragment">Digite um email válido.</string>
    <string name="text_password_empty_login_fragment">Digite sua senha</string>

    <!--    BottomBar-->
    <string name="title_menu_home">Início</string>
    <string name="title_menu_search">Pesquisar</string>
    <string name="title_menu_favorite">Favorite</string>
    <string name="title_menu_download">Baixar</string>
    <string name="title_menu_profile">Perfil</string>

    <!--   genre item-->
    <string name="text_show_all_genre_item">Ver todos</string>
</resources>