<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presenter.auth.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarLogin"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/urbanist_600"
            android:text="@string/entre_na_sua_conta"
            android:textAlignment="center"
            android:textColor="#212121"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/editEmailLogin"
            style="@style/ThemeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:hint="@string/text_hint_edit_email_login_fragment"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editSenhaLogin"
            style="@style/ThemeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="12dp"
            android:hint="@string/text_hint_edit_password_login_fragment"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmailLogin"
            tools:ignore="Autofill,PrivateResource" />

        <Button
            android:id="@+id/btnEntrarLogin"
            style="@style/ThemePrimaryButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/text_button_sign_in_login_fragment"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editSenhaLogin" />

        <ImageView
            android:id="@+id/pbLogin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEntrarLogin"
            tools:ignore="ContentDescription"
            tools:src="@drawable/loading"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pbLogin">

            <TextView
                android:id="@+id/btnForgotLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_600"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/text_forgot_password_login_fragment"
                android:textColor="#E21212"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1.2"
                    android:background="#9D9D9D" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/urbanist_400"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/text_continue_social_network_register_fragment"
                    android:textColor="#9D9D9D"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1.2"
                    android:background="#9D9D9D" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnFacebookLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_border"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_facebook"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnGoogleLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_border"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_google"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.25">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/urbanist_400"
                android:padding="12dp"
                android:text="@string/text_dont_have_an_account_home_auth_fragment"
                android:textAlignment="textEnd"
                android:textColor="#9e9e9e" />

            <TextView
                android:id="@+id/btnCriarContaLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/urbanist_600"
                android:padding="12dp"
                android:text="@string/clique_aqui"
                android:textAlignment="textStart"
                android:textColor="@color/color_default"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>